testsuite/tests/typecheck/should_compile/tc264.hsig
module ShouldCompile(newSTRef) where
import Data.STRef(newSTRef)
