testsuite/tests/typecheck/should_fail/tcfail222.hsig
module ShouldFail(newSTRef) where
import Data.STRef.Lazy(newSTRef)
